--- a/roles/docker-elasticsearch/templates/dockerfile.j2
+++ b/roles/docker-elasticsearch/templates/dockerfile.j2
@@ -1,2 +1,2 @@
-FROM elasticsearch:7
+FROM docker.elastic.co/elasticsearch/elasticsearch:6.8.6@sha256:81473aab06ae49a5058210610ac848cc8ae3393f319f23d4c5d982580b54ba36
 RUN /usr/share/elasticsearch/bin/plugin install repository-s3
