--- a/roles/docker-elasticsearch/templates/docker-compose.j2
+++ b/roles/docker-elasticsearch/templates/docker-compose.j2
@@ -3,5 +3,8 @@ version: "3.1"
 services:
   elasticsearch:
     image: docker-elastic
+    container_name: elasticsearch
     ports:
-      - "9200:9200"
+      - 9200:9200
+      - 9300:9300
+    restart: always
