--- a/roles/docker-elasticsearch/templates/docker-compose.j2
+++ b/roles/docker-elasticsearch/templates/docker-compose.j2
@@ -1,10 +1,16 @@
-version: "3.1"
-
+version: '3.1'
 services:
   elasticsearch:
     image: docker-elastic
-    container_name: elasticsearch
+    container_name: esx
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     ports:
       - 9200:9200
       - 9300:9300
-    restart: always
