--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -1,35 +1,22 @@
 server {
-    listen       80;
-    server_name  localhost;
+	listen      443 ssl;
+	server_name hompimpah.xyz;
+	
+	ssl_certificate /etc/letsencrypt/live/hompimpah.xyz/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/hompimpah.xyz/privkey.pem;
 
-    #access_log  /var/log/nginx/host.access.log  main;
-
-    location / {
+	location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
+}
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+server {
+	listen 80 ;
+	listen [::]:80;
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
+	server_name hompimpah.xyz;
+	return 301 https://$host$request_uri;
 }
 
 server {
