--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -12,17 +12,15 @@ server {
 }
 
 server {
-	listen 80 ;
-	listen [::]:80;
-
+	listen 80;
 	server_name hompimpah.xyz;
 	return 301 https://$host$request_uri;
 }
 
+# TESTING PROXY CONFIGURATION START HERE
 server {
     listen       80;
     server_name  testing.hompimpah.xyz;
-
     return 301 https://$host$request_uri;
 }
 
@@ -36,4 +34,50 @@ server {
     location / {
         proxy_pass   http://www.stealmylogin.com;
     }
+}
+
+
+# JENKINS PROXY CONFIGURATION START HERE
+upstream jenkins {
+    server 127.0.0.1:8080
+}
+
+server {
+    listen 80;
+    server_name jenkins.hompimpah.xyz;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name jenkins.hompimpah.xyz;
+
+    ssl_certificate /home/fullchain.pem;
+	ssl_certificate_key /home/privkey.pem;
+
+    location / {
+		sendfile off;
+
+		proxy_pass http://jenkins;
+		proxy_redirect     default;
+		proxy_http_version 1.1;
+
+		proxy_set_header   Host              $host;
+		proxy_set_header   X-Real-IP         $remote_addr;
+		proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Proto $scheme;
+		proxy_max_temp_file_size 0;
+
+		#this is the maximum upload size
+		client_max_body_size       10m;
+		client_body_buffer_size    128k;
+
+		proxy_connect_timeout      90;
+		proxy_send_timeout         90;
+		proxy_read_timeout         90;
+		proxy_buffering            off;
+		proxy_request_buffering    off; # Required for HTTP CLI commands in Jenkins > 2.54
+		proxy_set_header Connection ""; # Clear for keepalive
+	}
+
 }
