--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -38,6 +38,10 @@ server {
 
 
 # JENKINS PROXY CONFIGURATION START HERE
+upstream jenkins {
+    server 127.0.0.1:8080 fail_timeout=0;
+}
+
 server {
     listen 80;
     server_name jenkins.hompimpah.xyz;
@@ -49,10 +53,20 @@ server {
     server_name jenkins.hompimpah.xyz;
 
     ssl_certificate /home/fullchain.pem;
-	ssl_certificate_key /home/privkey.pem;
+    ssl_certificate_key /home/privkey.pem;
 
     location / {
-		proxy_pass localhost:8080;
-	}
-
+        proxy_set_header        Host $host:$server_port;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_redirect http:// https://;
+        proxy_pass              http://jenkins;
+        # Required for new HTTP-based CLI
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_buffering off; # Required for HTTP-based CLI to work over SSL
+        # workaround for https://issues.jenkins-ci.org/browse/JENKINS-45651
+        add_header 'X-SSH-Endpoint' 'jenkins.hompimpah.xyz:50022' always;
+    }
 }
