--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -60,7 +60,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_redirect http:// https://;
+        # proxy_redirect http:// https://;
         proxy_pass              http://jenkins;
         # Required for new HTTP-based CLI
         proxy_http_version 1.1;
