--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -43,30 +43,44 @@ upstream jenkins {
 }
 
 server {
-    listen 80;
-    server_name jenkins.hompimpah.xyz;
-    return 301 https://$host$request_uri;
+	listen 80;
+	listen [::]:80;
+
+	server_name jk.hompimpah.xyz;
+	return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
-    server_name jenkins.hompimpah.xyz;
 
-    ssl_certificate /home/fullchain.pem;
-    ssl_certificate_key /home/privkey.pem;
+	listen  443;
+	server_name jk.hompimpah.xyz;
 
-    location / {
-        proxy_set_header        Host $host:$server_port;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-        # proxy_redirect http:// https://;
-        proxy_pass              http://jenkins;
-        # Required for new HTTP-based CLI
-        proxy_http_version 1.1;
-        proxy_request_buffering off;
-        proxy_buffering off; # Required for HTTP-based CLI to work over SSL
-        # workaround for https://issues.jenkins-ci.org/browse/JENKINS-45651
-        add_header 'X-SSH-Endpoint' 'jenkins.hompimpah.xyz:50022' always;
-    }
+	ssl_certificate /home/fullchain.pem;
+	ssl_certificate_key /home/privkey.pem;
+
+
+	location / {
+		sendfile off;
+
+		proxy_pass http://jenkins;
+		proxy_redirect     default;
+		proxy_http_version 1.1;
+
+		proxy_set_header   Host              $host;
+		proxy_set_header   X-Real-IP         $remote_addr;
+		proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+		proxy_set_header   X-Forwarded-Proto $scheme;
+		proxy_max_temp_file_size 0;
+
+		#this is the maximum upload size
+		client_max_body_size       10m;
+		client_body_buffer_size    128k;
+
+		proxy_connect_timeout      90;
+		proxy_send_timeout         90;
+		proxy_read_timeout         90;
+		proxy_buffering            off;
+		proxy_request_buffering    off; # Required for HTTP CLI commands in Jenkins > 2.54
+		proxy_set_header Connection ""; # Clear for keepalive
+	}
 }
