update instance-a playbook

--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -39,7 +39,7 @@ server {
 
 # JENKINS PROXY CONFIGURATION START HERE
 upstream jenkins {
-    server 127.0.0.1:8080 fail_timeout=0;
+    server hompimpah.xyz:8080 fail_timeout=0;
 }
 
 server {
