--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -57,8 +57,23 @@ server {
 	ssl_certificate_key /home/privkey.pem;
 
 	location / {
-		proxy_pass http://elasticsearch;
-	}
+        proxy_pass http://elasticsearch;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_cache elasticsearch;
+        proxy_cache_valid 200 302 10m;
+        proxy_cache_valid 404 1m;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        health_check interval=5s fails=1 passes=1 uri=/ match=statusok;
+    }
+
+    # redirect server error pages to the static page /50x.html
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+    access_log logs/es_access.log combined;
 }
 
 # JENKINS PROXY CONFIGURATION START HERE
