--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -58,14 +58,20 @@ server {
 
 	location / {
         proxy_pass http://elasticsearch;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_cache elasticsearch;
-        proxy_cache_valid 200 302 10m;
-        proxy_cache_valid 404 1m;
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 10s;
-        health_check interval=5s fails=1 passes=1 uri=/ match=statusok;
+        proxy_redirect off;
+		proxy_http_version 1.1;
+		proxy_set_header Connection "";
+
+		proxy_set_header  X-Real-IP  $remote_addr;
+		proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header  Host $http_host;
+
+		# For CORS Ajax
+		proxy_pass_header Access-Control-Allow-Origin;
+		proxy_pass_header Access-Control-Allow-Methods;
+		proxy_hide_header Access-Control-Allow-Headers;
+		add_header Access-Control-Allow-Headers 'X-Requested-With, Content-Type';
+		add_header Access-Control-Allow-Credentials true;
     }
 
     # redirect server error pages to the static page /50x.html
