--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -49,6 +49,20 @@ server {
 	server_name elastic.hompimpah.xyz;
 	location / {
 		proxy_pass http://elasticsearch;
+		proxy_redirect off;
+		proxy_http_version 1.1;
+		proxy_set_header Connection "";
+
+		proxy_set_header  X-Real-IP  $remote_addr;
+		proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header  Host $http_host;
+
+		# For CORS Ajax
+		proxy_pass_header Access-Control-Allow-Origin;
+		proxy_pass_header Access-Control-Allow-Methods;
+		proxy_hide_header Access-Control-Allow-Headers;
+		add_header Access-Control-Allow-Headers 'X-Requested-With, Content-Type';
+		add_header Access-Control-Allow-Credentials true;
 	}
 }
 
