--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -47,9 +47,19 @@ server {
 	listen 80;
 
 	server_name elastic.hompimpah.xyz;
+	return 301 https://$host$request_uri;
+}
+
+server {
+	listen 443;
+	server_name elastic.hompimpah.xyz;
+
+	ssl_certificate /home/fullchain.pem;
+	ssl_certificate_key /home/privkey.pem;
+
 	location / {
-		proxy_pass http://elasticsearch;
-		proxy_redirect off;
+        proxy_pass http://elasticsearch;
+        proxy_redirect off;
 		proxy_http_version 1.1;
 		proxy_set_header Connection "";
 
@@ -63,7 +73,14 @@ server {
 		proxy_hide_header Access-Control-Allow-Headers;
 		add_header Access-Control-Allow-Headers 'X-Requested-With, Content-Type';
 		add_header Access-Control-Allow-Credentials true;
-	}
+    }
+
+    # redirect server error pages to the static page /50x.html
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+    access_log logs/es_access.log combined;
 }
 
 # JENKINS PROXY CONFIGURATION START HERE
