--- a/roles/docker-nginx/templates/default.conf.j2
+++ b/roles/docker-nginx/templates/default.conf.j2
@@ -39,8 +39,8 @@ server {
 # ELASCTICSEARCH PROXY CONFIGURATION START HERE
 
 upstream elasticsearch {
-	server http://10.130.32.156:9200;
-	keepalive 64;
+	server 10.130.32.156:9200;
+	keepalive 16;
 }
 
 server {
